# human_activity_detection

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
archive/: data.yaml  testing.py  training.py
config/: data.yaml  data_temp.yaml  inference_config.yaml  training_config.yaml
data/: data.yaml
docs/: DATASET_FINDINGS.md  FALSE_POSITIVES.md  INFERENCE_ISSUES.md  INSTALL_CUDA.md  LINKEDIN_POST.md  MODEL_TRAINING.md  README.md
models/: README.md
scripts/: improve_inference.py  quick_start.py  setup_uv.ps1  setup_uv.sh  verify_setup.py
src/: __init__.py  evaluate.py  inference.py  inference_improved.py  train.py  utils.py
